Add Tasmota Controller

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,9 +10,9 @@
             "request": "launch",
             "preLaunchTask": "build",
             // If you have changed target frameworks, make sure to update the program path.
-            "program": "${workspaceFolder}/ImmersionController/bin/Debug/netcoreapp3.1/ImmersionController.dll",
+            "program": "${workspaceFolder}/TasmotaController/bin/Debug/netcoreapp3.1/TasmotaController.dll",
             "args": [],
-            "cwd": "${workspaceFolder}/ImmersionController",
+            "cwd": "${workspaceFolder}/TasmotaController",
             // For more information about the 'console' field, see https://aka.ms/VSCode-CS-LaunchJson-Console
             "console": "internalConsole",
             "stopAtEntry": false
